deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ilpostapi
spec:
  selector:
    app: ilpostapi
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
